# InsightSpike-AI

./: .gitignore  .gitmodules  .zenodo.json  AGENTS.md  CONCEPTS.md  CONTRIBUTING.md  EXPERIMENTS.md  Makefile  None  QUICKSTART.md  README.md  README_EN.md  config.yaml  innovation_assessment.md  pyproject.toml  run_local_app.sh  test_output.txt  test_output_lambda.txt  test_output_lambda_2.txt
docxology/: README.md  pyproject.toml  run_all.py
docxology/config/: README.md  __init__.py  config.toml  loader.py
docxology/docs/: README.md  api_reference.md  architecture.md  concepts.md  design.md  development.md  experiments.md  getting_started.md  index.md  source_inventory.md  system_overview.md  user_guide.md
docxology/examples/: README.md  analyze_results.py  extended_analysis.py  generate_all_visualizations.py  generate_report.py  run_all_methods.py
docxology/output/: README.md
docxology/output/analysis/: analysis.html  analysis.json  analysis.md  discovery_results.json
docxology/output/reports/: comprehensive_report.csv  comprehensive_report.html  comprehensive_report.json  comprehensive_report.md
docxology/output/sample_results/: result_1.json  result_2.json  result_3.json  result_4.json  result_5.json
docxology/scripts/: verify_defaults.py  verify_glm_flash.py  verify_ministral.py
docxology/src/: README.md
docxology/src/docxology/: README.md  __init__.py  cli.py
docxology/tests/: README.md  __init__.py  conftest.py  test_llm_providers.py  test_ollama_integration.py  test_smoke.py
docxology/tests/integration/: README.md  test_full_pipeline.py
(+758 files in other folders)
