[project]
name = "docxology"
version = "0.1.0"
description = "Sidecar orchestration and testing framework for InsightSpike-AI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Kazuyoshi Miyauchi", email = "contact@insightspike-ai.org" }
]
keywords = ["orchestration", "testing", "insightspike", "analysis", "visualization"]

dependencies = [
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
docx = "docxology.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
